@@ -1,6 +1,6 @@
 //  Gant -- A Groovy build framework based on scripting Ant tasks.
 //
-//  Copyright © 2006-7 Russel Winder
+//  Copyright © 2006-8 Russel Winder
 //
 //  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 //  compliance with the License. You may obtain a copy of the License at
@@ -14,6 +14,8 @@
 
 package org.codehaus.gant ;
 
+import org.apache.tools.ant.Project ;
+
 /**
  *  A class to hold the global shared state for a run of Gant.  This was originally needed because parts of
  *  Gant are written in Java and parts in Groovy and it was not possible to compile them all at the same
@@ -25,22 +27,29 @@ package org.codehaus.gant ;
  *  @author Russel Winder <russel.winder@concertant.com>
  */
 class GantState {
+
+  //  Use the representation of verbosity level from Project to avoid translations later.
+
   /**
    *  Output no information ever.
    */
-  public final static int SILENT = 0 ;
+  public final static int SILENT = Project.MSG_ERR ;
   /**
    *  Output only the meagrest of information.
    */
-  public final static int QUIET = 1 ;
+  public final static int QUIET = Project.MSG_WARN ;
   /**
    *  Output information about which task is executing, and other things.
    */
-  public final static int NORMAL = 2 ;
+  public final static int NORMAL = Project.MSG_INFO ;
   /**
    *  Output lots of information about what is going on.
    */
-  public final static int VERBOSE = 3 ;
+  public final static int VERBOSE = Project.MSG_VERBOSE ;
+  /**
+   *  Output huge amounts of information about what is going on.
+   */
+  public final static int DEBUG = Project.MSG_DEBUG ;
   /**
    *  The current state of the verbosity of execution -- default is <code>NORMAL</code>.
    */
